force-app/main/default/objects/Wave_Quota__c/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <label>Practice</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Development</fullName>
                <default>true</default>
                <label>Client Development</label>
            </value>
            <value>
                <fullName>Integration Practice</fullName>
            </value>
            <value>
                <fullName>Revenue Practice</fullName>
            </value>
            <value>
                <fullName>Risk Practice</fullName>
            </value>
            <value>
                <fullName>Multiple Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>