force-app/main/default/objects/Wave_Quota__c/fields/Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quota_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Quota Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>