force-app/main/default/objects/Wave_Quota__c/fields/Quota_Amount_AUD__c.field-meta.xml
<CustomField>
    <fullName>Quota_Amount_AUD__c</fullName>
    <formula>Quota_Amount__c * 1.351400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rate:1.351400</inlineHelpText>
    <label>Quota Amount AUD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>