force-app/main/default/objects/Wave_Quota__c/listViews/FY18_H1_Quotas.listView-meta.xml
<ListView>
    <fullName>FY18_H1_Quotas</fullName>
    <columns>NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Quarter__c</columns>
    <columns>FY_Year__c</columns>
    <columns>Practice__c</columns>
    <columns>Quota_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Quota_Amount_AUD__c</columns>
    <columns>Quota_Amount_EUR__c</columns>
    <columns>Quota_Amount_GBP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FY_Year__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </filters>
    <filters>
        <field>Quarter__c</field>
        <operation>equals</operation>
        <value>Q1,Q2</value>
    </filters>
    <label>FY18 H1 Quotas</label>
    <language>en_US</language>
</ListView>